--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Remplace le favicon par un SVG data URL libre -->
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href='data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path fill="%23e11d48" d="M23.6 3.9c-2.5 0-4.7 1.3-6 3.3C16.1 5.2 13.9 3.9 11.4 3.9 7.4 3.9 4 7.3 4 11.3c0 8.1 12 16.8 12 16.8s12-8.7 12-16.8c0-4-3.4-7.4-7.4-7.4z"/></svg>'
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Beauty by Doudou - Complexe de Beauté | Yaoundé & Douala</title>
-    <meta name="description" content="Beauty by Doudou - Votre complexe de beauté de référence à Yaoundé et Douala. Coiffure, soins visage, manucure, épilation et plus encore." />
-    <meta name="keywords" content="beauty, beauté, salon, coiffure, soins, Yaoundé, Douala, Cameroun" />
+    <title>Éclat Beauté - Complexe de Beauté | Yaoundé & Douala</title>
+    <meta
+      name="description"
+      content="Éclat Beauté - Votre complexe de beauté de référence à Yaoundé et Douala. Coiffure, soins visage, manucure, épilation et plus encore."
+    />
+    <meta
+      name="keywords"
+      content="éclat beauté, beauty, beauté, salon, coiffure, soins, Yaoundé, Douala, Cameroun"
+    />
   </head>
   <body>
     <div id="root"></div>
